--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -2,6 +2,7 @@
   background-color: rgb(27, 25, 25);
   margin: 20px;
   border-radius: 20px;
+  /* padding: 10px; */
 }
 .blog-item-container:hover {
   border: 3px solid white;
