--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -40,8 +40,9 @@
 }
 
 .card-contents:hover {
-  border-radius: 20px;
-  border: 2px solid white;
+  /* border-radius: 20px; */
+  /* border: 2px solid white; */
+  /* background-color: black; */
 }
 
 .card-contents > * {
