--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -2,10 +2,10 @@
   background-color: rgb(27, 25, 25);
   margin: 20px;
   border-radius: 20px;
-  /* padding: 10px; */
 }
 .blog-item-container:hover {
-  border: 3px solid white;
+  border: 2px solid white;
+  background-color: black;
 }
 
 
@@ -49,7 +49,6 @@
 }
 
 .blog-item-container > p > a {
-  /* color: rgb(155, 232, 140); */
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
@@ -62,7 +61,7 @@
 }
 .blog-contents > h4{
   font-size: 25px;
-  /* line-height: 0%; */
+  margin-bottom: -2%;
 }
 
 .tag{
