--- a/src/components/cheer/cheer.css
+++ b/src/components/cheer/cheer.css
@@ -9,14 +9,14 @@
 .player > * {
   margin: 10px;
   cursor: pointer;
-  background-color: rgb(107, 105, 105);
+  background-color: rgb(27, 25, 25);
   border: 0px solid white;
   border-radius: 5px;
   padding: 5px;
 }
 
 .player > *:hover {
-  /* border: 2px solid white; */
+  border: 1px solid white;
   background-color: rgb(0, 0, 0);
   border-radius: 5px;
 }
