--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -10,7 +10,13 @@
   cursor: pointer;
   -webkit-transition-duration: 0.3s; /* Safari */
   transition-duration: 0.3s;
+   width: 45px; 
+  height: 45px; 
 }
+
+/* svg{
+  max-width: 100%;
+} */
 
 @keyframes kreep {
   0% {
@@ -34,6 +40,12 @@
 .kreep:hover {
   animation: kreep 0.7s ease 0s infinite alternate;
 }
+
+/* svg{
+ width: 100%;
+ height: 100%;
+
+} */
 
 @media screen and (max-width: 760px) {
   .contact-container > * {
