--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -16,7 +16,6 @@
   display: flex;
   flex-direction: column;
   border: 0px solid white;
-  /* overflow: hidden; */
 }
 
 .edu-item {
@@ -30,7 +29,7 @@
 }
 
 .edu-item:hover {
-	border: 2px solid white;
+  background-color: black;
   }
 
 .exp-item {
@@ -42,7 +41,7 @@
 }
 
 .exp-item:hover{
-	border: 2px solid white;
+  background-color: black;
 }
 
 .edu-contents {
