--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,10 +1,11 @@
 .blog-item-container {
   background-color: rgb(27, 25, 25);
   margin: 20px;
-  /* cursor: pointer; */
   border-radius: 20px;
+  border: 2px solid rgba(0,0,0,0);
 }
 .blog-item-container:hover {
+  
   border: 2px solid white;
   background-color: black;
 }
@@ -16,6 +17,7 @@
   color: rgb(255, 255, 255);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   max-width: 100%;
+
 }
 
 
