--- a/src/components/cheer/cheer.css
+++ b/src/components/cheer/cheer.css
@@ -1,5 +1,6 @@
 .cheer-container {
   display: flex;
+  flex-direction: row;
   justify-content: center;
 }
 .player {
@@ -10,13 +11,13 @@
   margin: 10px;
   cursor: pointer;
   background-color: rgb(27, 25, 25);
-  border: 0px solid white;
+  border: 2px solid rgb(0, 0, 0);
   border-radius: 5px;
   padding: 5px;
 }
 
 .player > *:hover {
-  border: 1px solid white;
+  border: 2px solid white;
   background-color: rgb(0, 0, 0);
   border-radius: 5px;
 }
