--- a/src/index.css
+++ b/src/index.css
@@ -210,7 +210,7 @@ body {
     width: auto;
   }
   .footer {
-    margin-top: 4%;
+    /* margin-top: 4%; */
   }
   .footer > footer > p {
     font-size: x-small;
