--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -18,6 +18,7 @@
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
 	.logo {
+		margin-top: 15px;
 		height: 150px;
 		width: 150px;
 	}
