--- a/src/index.css
+++ b/src/index.css
@@ -67,21 +67,33 @@ body {
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  /* justify-content: center; */
+  align-items: center;
   overflow-x: hidden;
+  position: relative;
+  min-height: 100vh;
 }
 
 .main > * {
-  width: auto;
+  width: 100%;
+}
+
+.content-wrap{
+  padding-bottom: 2.5rem;
 }
 
 .footer {
-  position: relative;
+  /* position: relative; */
+  /* bottom: 0;
+  width: auto; */
+  text-align: center; 
+  /* position: absolute; */
+  position: absolute;
   bottom: 0;
-  width: auto;
-  text-align: center;
+  width: 100%;
+  height: 2.5rem; 
 }
-.footer > footer > p {
+.footer > p {
   color: rgb(255, 255, 255);
   font-size: small;
 }
@@ -187,7 +199,7 @@ body {
     overflow-x: hidden;
   }
   .main > * {
-    width: auto;
+    width: 100%;
     /* margin-top: 3%; */
   }
 
@@ -207,7 +219,7 @@ body {
     /* margin-top: 5%; */
   }
   .main > * {
-    width: auto;
+    width: 100%;
   }
   .footer {
     /* margin-top: 4%; */
