--- a/src/components/about/about-me.css
+++ b/src/components/about/about-me.css
@@ -7,45 +7,57 @@
 }
 .about-buttons {
   display: flex;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   justify-content: space-around;
-  flex: 100%;
+  /* flex: 100%; */
 }
 
 .previous {
-  width: 30%;
+  /* width: 30%; */
+  width: 90px;
   text-align: center;
+  font-size: 1.5vh;
+  
 }
 
 .next {
-  width: 30%;
+  width: 90px;
+  /* width: 30%; */
+  font-size: 1.5vh;
   text-align: center;
 }
 
 @media screen and (max-width: 760px) {
   .about-container {
-    width: 70%;
+    width: 100%;
+    padding-left: 32px;
+    padding-right: 32px;
   }
   .previous {
-    width: 28%;
+    /* width: 28%; */
+    /* width: 100%; */
   }
   
   .next {
-    width: 28%;
+    /* width: 28%; */
+    /* width: 100%; */
   }
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
   .about-container {
     width: 100%;
-    margin: 16px;
-    padding: 16px;
+    /* margin: 16px; */
+    padding-left: 16px;
+    padding-right: 16px;
   }
   .previous {
-    width: 25%;
+    /* width: 25%; */
+    /* width: 100%; */
   }
   
   .next {
-    width: 25%;
+    /* width: 25%; */
+    /* width: 100%; */
   }
 }
