--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -2,14 +2,12 @@
   background-color: rgb(27, 25, 25);
   margin: 20px;
   border-radius: 20px;
-  border: 2px solid rgba(0,0,0,0);
+  border: 2px solid rgba(0, 0, 0, 0);
 }
 .blog-item-container:hover {
-  
   border: 2px solid white;
   background-color: black;
 }
-
 
 .blog-item-container > * {
   margin: 10px;
@@ -17,72 +15,64 @@
   color: rgb(255, 255, 255);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   max-width: 100%;
-
 }
 
-
-
- .imgDiv{
-  height: 50px; 
-	padding: 10px;
-	border-radius: 5px;
+.imgDiv {
+  height: 50px;
+  padding: 10px;
+  border-radius: 5px;
   display: flex;
-	background-size: auto;
+  background-size: auto;
 }
-.desc > *{
+.desc > * {
   margin-left: 20px;
-  
-  font-family:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 0%;
 }
 
-.desc > p{
+.desc > p {
   font-size: smaller;
   color: white;
 }
 
-.desc > span{
+.desc > span {
   font-size: x-small;
   color: rgb(170, 170, 170);
 }
 
-.blog-item-container > .imgDiv >img{
-	border-radius: 50%;
-	object-fit: cover;
+.blog-item-container > .imgDiv > img {
+  border-radius: 50%;
+  object-fit: cover;
 }
 
-.blog-item-container > p{
+.blog-item-container > p {
   margin-bottom: 5%;
   font-size: 17px;
 }
 
 .blog-item-container > p > a {
-  
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .blog-item-container > p > a:hover {
   color: #39ff14;
   cursor: pointer;
 }
-.blog-item-container > h4{
+.blog-item-container > h4 {
   font-size: 25px;
 }
 
-.tag{
+.tag {
   background-color: white;
   float: left;
-  width:fit-content;
+  width: fit-content;
   text-align: center;
   border-radius: 3px;
 }
 
-.tag>span{
+.tag > span {
   padding: 4px;
   text-align: center;
   color: rgb(27, 25, 25);
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
-
-
-
-
