--- a/src/index.css
+++ b/src/index.css
@@ -10,10 +10,14 @@ body {
   max-width: 100%;
   min-height: 100vh;
   background-color: rgb(0, 0, 0) !important;
-  overflow-x: hidden!;
+  /* overflow-x: hidden !important; */
+  /* overflow-y: hidden !important; */
 
   /* outline: 1px red solid !important;
 	visibility: visible !important; */
+}
+body::-webkit-scrollbar{
+  display: none;
 }
 .space {
   position: fixed;
@@ -66,13 +70,13 @@ body {
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   /* justify-content: center; */
-  align-items: center;
-  overflow-x: hidden;
+  /* align-items: center;
+  overflow-x: hidden; */
   position: relative;
-  min-height: 100vh;
+  min-height: 70vh;
 }
 
 .main > * {
@@ -80,7 +84,7 @@ body {
 }
 
 .content-wrap{
-  padding-bottom: 2.5rem;
+  padding-bottom: 2rem;
 }
 
 .footer {
@@ -92,7 +96,7 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 2.5rem; 
+  height: 2rem; 
 }
 .footer > p {
   color: rgb(255, 255, 255);
@@ -193,6 +197,12 @@ body {
 	100% {
 	  border: 3px solid #ff9900;
 	}
+  }
+  @media screen and (max-width: 900px) {
+    .main > * {
+      width: 100%;
+      /* margin-top: 3%; */
+    }
   }
 
 @media screen and (max-width: 760px) {
