--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -12,7 +12,7 @@
 
 .avatar {
   height: 130px;
-  width: 100%;
+  width: 450px;
   padding: 10px;
   border-radius: 5px;
   display: flex;
@@ -91,6 +91,7 @@
   }
   .avatar {
     /* height: 90px; */
+    /* width: 100%; */
   }
 
   /* .avatar-image {
@@ -127,7 +128,8 @@
   }
 
   .avatar {
-    /* height: 65px; */
+    /* height: 90px; */
+    width: 300px;
   }
 
   .avatar-image {
