--- a/src/components/projects/project-item.css
+++ b/src/components/projects/project-item.css
@@ -4,9 +4,9 @@
   justify-content: top;
   background-color: rgb(27, 25, 25);
 
-  height: 380px;
-  width: 300px;
-  margin: 25px;
+  /* height: 380px; */
+  width: 500px;
+  margin-bottom: 35px;
   cursor: pointer;
   border-radius: 20px;
 }
@@ -18,15 +18,22 @@
 
 .video-player {
   position: relative;
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
   flex: 1 1 0px;
   transition: transform 500ms;
+  background-color: black;
+  width: 500px;
+
+  /* width: 500px; */
 }
 
 .video-player:hover {
   z-index: 1000;
-  transform: scale(1.3);
-  background-color: transparent;
+  transform: scale(1.1);
+  background-color: black;
   /* transform: translateY(-5px); */
   box-shadow: 0px 0px 30px 30px rgba(255, 255, 255, 0.25);
 }
@@ -36,7 +43,8 @@
   flex-direction: column;
   align-items: center;
   margin: 8px;
-  padding: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .card-contents:hover {
@@ -60,7 +68,19 @@
 }
 
 @media screen and (max-width: 760px) {
+  .project-item-card {
+    width: 100%;
+  }
+  .video-player {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
+  .project-item-card {
+    width: 100%;
+  }
+  .video-player {
+    width: 100%;
+  }
 }
