--- a/src/index.css
+++ b/src/index.css
@@ -85,6 +85,10 @@ body::-webkit-scrollbar{
 
 .content-wrap{
   padding-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .footer {
