--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -23,6 +23,9 @@
   height: 50px;
   font-size: 20px;
   padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 .my-resume {
   width: 100%;
