--- a/src/components/about/about-me.css
+++ b/src/components/about/about-me.css
@@ -30,8 +30,8 @@
 @media screen and (max-width: 760px) {
   .about-container {
     width: 100%;
-    padding-left: 32px;
-    padding-right: 32px;
+    /* padding-left: 16px !important;
+    padding-right: 16px !important; */
   }
   .previous {
     /* width: 28%; */
@@ -48,8 +48,8 @@
   .about-container {
     width: 100%;
     /* margin: 16px; */
-    padding-left: 16px;
-    padding-right: 16px;
+    /* padding-left: 16px !important;
+    padding-right: 16px !important; */
   }
   .previous {
     /* width: 25%; */
