--- a/src/components/blogs/blog-item.css
+++ b/src/components/blogs/blog-item.css
@@ -1,8 +1,10 @@
 .blog-item-container {
   background-color: rgb(27, 25, 25);
-  margin: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 20px;
   border: 2px solid rgba(0, 0, 0, 0);
+  padding: 8px;
 }
 .blog-item-container:hover {
   border: 2px solid white;
