--- a/src/components/blogs/blogs.css
+++ b/src/components/blogs/blogs.css
@@ -26,9 +26,9 @@
 
 @media screen and (max-width: 760px) {
 	.blogs-container {
-		width: 100%;
-		padding-left: 32px;
-		padding-right: 32px;
+		/* width: 100%; */
+		/* padding-left: 32px;
+		padding-right: 32px; */
 		/* margin: 16px; */
 	}
 
@@ -40,7 +40,7 @@
 	  }
 }
 
-@media screen and (min-width: 300px) and (max-width: 480px) {
+@media screen and (max-width: 560px) {
 	.blogs-container {
 		width: 100%;
 		padding-left: 16px;
