--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -122,8 +122,8 @@
 @media screen and (max-width: 480px) {
   .intro-container {
     width: 100%;
-    padding-left: 16px;
-    padding-right: 16px;
+    padding-left: 16px !important;
+    padding-right: 16px !important;
     text-align: center;
   }
 
