--- a/src/components/resume/my-resume.css
+++ b/src/components/resume/my-resume.css
@@ -50,7 +50,7 @@
   } */
 }
 
-@media screen and (min-width: 300px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .resume-container {
     width: 100%;
   }
