--- a/src/components/about/about-contents/from-to.css
+++ b/src/components/about/about-contents/from-to.css
@@ -138,7 +138,7 @@
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 480px) {
+@media screen and (max-width: 480px) {
   .from-to-container > h3 > span {
     font-size: 2.5vh;
   }
