--- a/src/components/about/about-contents/skills.css
+++ b/src/components/about/about-contents/skills.css
@@ -53,7 +53,7 @@
   background-color: rgb(27, 25, 25);
   margin: 10px;
   border-radius: 20px;
-gap:30px;
+  gap: 30px;
   /* width: 680px;
   gap: 30px; */
 }
@@ -77,19 +77,19 @@ gap:30px;
 
 @media screen and (max-width: 760px) {
   .skills-container {
-    width: 100%;
+    width: 500px;
   }
   .skills-container > h3 > span {
     font-size: 2.8vh;
   }
   .icons-container {
-    width: 100%;
+    /* width: 100%; */
     /* height: 90px; */
     /* height: 90%; */
   }
 
   .icons-container-tools {
-    width: 100%;
+    /* width: 100%; */
     /* height: 90px; */
     /* height: 90%; */
   }
@@ -112,21 +112,21 @@ gap:30px;
   }
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 550px) {
   .skills-container {
-    width: 100%;
+    width: 500px;
   }
   .skills-container > h3 > span {
     font-size: 2.5vh;
   }
   .icons-container {
-    width: 100%;
+    /* width: 100%; */
     /* height: 80px; */
     /* height: 100%; */
   }
   .icons-container-tools {
-    width: 100%;
-	gap: 20px;
+    /* width: 100%; */
+    gap: 20px;
     /* height: 90px; */
   }
 
@@ -146,3 +146,40 @@ gap:30px;
     font-size: 40px;
   }
 }
+
+@media screen and (max-width: 500px) {
+  .skills-container {
+    width: 450px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .skills-container {
+    width: 430px;
+  }
+}
+@media screen and (max-width: 430px) {
+  .skills-container {
+    width: 420px;
+  }
+}
+@media screen and (max-width: 420px) {
+  .skills-container {
+    width: 400px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .skills-container {
+    width: 390px;
+  }
+}
+@media screen and (max-width: 390px) {
+  .skills-container {
+    width: 375px;
+  }
+}
+@media screen and (max-width: 380px) {
+  .skills-container {
+    width: 100%;
+  }
+}
+
