added background as an img

--- a/src/components/home/hello-message.css
+++ b/src/components/home/hello-message.css
@@ -3,7 +3,7 @@
   background-color: black;
   display: flex;
   font-family: "Press Start 2P", cursive;
-  margin-top: 5px;
+  /* margin-top: 5px; */
 }
 
 .wave {
