--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -18,7 +18,7 @@
 
 @media screen and (min-width: 300px) and (max-width: 480px) {
   .logo {
-    margin-top: 15px;
+    /* margin-top: 10px; */
     height: 150px;
     width: 150px;
   }
