--- a/src/components/home/intro.css
+++ b/src/components/home/intro.css
@@ -60,7 +60,7 @@
   font-family: Futura;
 }
 
-.contents > span {
+.contents > p > span {
   font-size: 2.3vh;
   font-style: italic;
   filter: contrast(200%);
@@ -68,17 +68,17 @@
   font-family: Futura;
 }
 
-.contents > div > strong {
+.contents > p > strong {
   font-family: Futura;
   font-size: 3.5vh;
   line-height: 2;
   color: white;
 }
 
-.contents > span {
+.contents > .location {
   font-size: 2vh;
 }
-ear .contents > span > i {
+.contents > span > i {
   font-size: 1.8vh;
   font-family: Futura;
 }
