--- a/src/components/home/logo.css
+++ b/src/components/home/logo.css
@@ -2,6 +2,13 @@
   display: flex;
   justify-content: center;
 }
+.logo-button{
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
 .logo {
   height: 180px;
   width: 180px;
